--- a/.config
+++ b/.config
@@ -414,15 +414,39 @@ CONFIG_SOFT_FLOAT=y
 # CONFIG_USE_MIPS16 is not set
 # CONFIG_EXTERNAL_TOOLCHAIN is not set
 CONFIG_NEED_TOOLCHAIN=y
-# CONFIG_TOOLCHAINOPTS is not set
+CONFIG_TOOLCHAINOPTS=y
 # CONFIG_EXTRA_TARGET_ARCH is not set
+
+#
+# Binary tools
+#
+CONFIG_BINUTILS_VERSION_LINARO=y
 CONFIG_EXTRA_BINUTILS_CONFIG_OPTIONS=""
 CONFIG_BINUTILS_VERSION="linaro"
+
+#
+# Compiler
+#
+# CONFIG_GCC_USE_VERSION_4_6_LINARO is not set
+CONFIG_GCC_USE_VERSION_4_8_LINARO=y
+# CONFIG_GCC_USE_GRAPHITE is not set
 CONFIG_EXTRA_GCC_CONFIG_OPTIONS=""
 # CONFIG_SSP_SUPPORT is not set
 # CONFIG_SJLJ_EXCEPTIONS is not set
 # CONFIG_INSTALL_LIBGCJ is not set
-# CONFIG_INSTALL_GFORTRAN is not set
+CONFIG_INSTALL_GFORTRAN=y
+
+#
+# C Library
+#
+# CONFIG_LIBC_USE_GLIBC is not set
+CONFIG_LIBC_USE_UCLIBC=y
+CONFIG_UCLIBC_USE_VERSION_0_9_33=y
+# CONFIG_UCLIBC_ENABLE_DEBUG is not set
+
+#
+# Debuggers
+#
 CONFIG_GDB=y
 # CONFIG_INSIGHT is not set
 CONFIG_USE_UCLIBC=y
@@ -2179,6 +2203,7 @@ CONFIG_PACKAGE_jsonfilter=y
 # CONFIG_PACKAGE_libatomic is not set
 CONFIG_PACKAGE_libc=y
 CONFIG_PACKAGE_libgcc=y
+CONFIG_PACKAGE_libgfortran=m
 CONFIG_PACKAGE_libpthread=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libstdcpp=y
@@ -3113,6 +3138,12 @@ CONFIG_PACKAGE_node-socket.io=m
 CONFIG_PACKAGE_node-sqlite3=m
 CONFIG_PACKAGE_node-static=m
 CONFIG_PACKAGE_node-ws=m
+
+#
+# Octave
+#
+CONFIG_PACKAGE_octave=m
+CONFIG_PACKAGE_octave-data=m
 
 #
 # PHP
