--- a/.config
+++ b/.config
@@ -97,6 +97,7 @@ CONFIG_TARGET_ar71xx_generic=y
 # CONFIG_TARGET_ar71xx_generic_CF-E316N-V2 is not set
 # CONFIG_TARGET_ar71xx_generic_WP543 is not set
 # CONFIG_TARGET_ar71xx_generic_WPE72 is not set
+# CONFIG_TARGET_ar71xx_generic_WPJ342 is not set
 # CONFIG_TARGET_ar71xx_generic_WPJ344 is not set
 # CONFIG_TARGET_ar71xx_generic_WPJ531 is not set
 # CONFIG_TARGET_ar71xx_generic_WPJ558 is not set
@@ -163,6 +164,7 @@ CONFIG_TARGET_ar71xx_generic_LININO=y
 # CONFIG_TARGET_ar71xx_generic_OMEGA is not set
 # CONFIG_TARGET_ar71xx_generic_OM2P is not set
 # CONFIG_TARGET_ar71xx_generic_OM5P is not set
+# CONFIG_TARGET_ar71xx_generic_OM5PAC is not set
 # CONFIG_TARGET_ar71xx_generic_MR600 is not set
 # CONFIG_TARGET_ar71xx_generic_MR900 is not set
 # CONFIG_TARGET_ar71xx_generic_MR1750 is not set
@@ -2381,7 +2383,6 @@ CONFIG_PACKAGE_wireless-tools=y
 #
 # zabbix
 #
-CONFIG_PACKAGE_zabbix-agent=m
 CONFIG_PACKAGE_zabbix-agentd=m
 # CONFIG_PACKAGE_zabbix-extra-mac80211 is not set
 # CONFIG_PACKAGE_zabbix-extra-network is not set
@@ -2459,6 +2460,7 @@ CONFIG_PACKAGE_ath9k-htc-firmware=y
 # CONFIG_PACKAGE_brcmfmac-firmware-pcie is not set
 # CONFIG_PACKAGE_brcmfmac-firmware-sdio is not set
 # CONFIG_PACKAGE_brcmfmac-firmware-usb is not set
+# CONFIG_PACKAGE_brcmfmac43430-firmware-sdio is not set
 # CONFIG_PACKAGE_brcmsmac-firmware is not set
 # CONFIG_PACKAGE_carl9170-firmware is not set
 # CONFIG_PACKAGE_ibt-firmware is not set
@@ -3911,6 +3913,23 @@ CONFIG_PACKAGE_libsqlite3=y
 # CONFIG_PACKAGE_pgsqlodbc is not set
 # CONFIG_PACKAGE_tdb is not set
 CONFIG_PACKAGE_unixodbc=m
+
+#
+# libelektra
+#
+# CONFIG_PACKAGE_libelektra-boost is not set
+# CONFIG_PACKAGE_libelektra-core is not set
+# CONFIG_PACKAGE_libelektra-cpp is not set
+# CONFIG_PACKAGE_libelektra-crypto is not set
+# CONFIG_PACKAGE_libelektra-dbus is not set
+# CONFIG_PACKAGE_libelektra-extra is not set
+# CONFIG_PACKAGE_libelektra-lua is not set
+# CONFIG_PACKAGE_libelektra-plugins is not set
+# CONFIG_PACKAGE_libelektra-python2 is not set
+# CONFIG_PACKAGE_libelektra-python3 is not set
+# CONFIG_PACKAGE_libelektra-resolvers is not set
+# CONFIG_PACKAGE_libelektra-xml is not set
+# CONFIG_PACKAGE_libelektra-yajl is not set
 CONFIG_PACKAGE_alsa-lib=m
 CONFIG_PACKAGE_argp-standalone=y
 CONFIG_PACKAGE_bind-libs=m
@@ -5107,6 +5126,7 @@ CONFIG_PACKAGE_png2mono=m
 # CONFIG_PACKAGE_tvheadend is not set
 CONFIG_PACKAGE_vips=m
 # CONFIG_PACKAGE_xupnpd is not set
+# CONFIG_PACKAGE_youtube-dl is not set
 
 #
 # Network
@@ -5565,97 +5585,8 @@ CONFIG_PACKAGE_sshtunnel=m
 #
 # CONFIG_PACKAGE_asterisk11 is not set
 # CONFIG_PACKAGE_asterisk13 is not set
-CONFIG_PACKAGE_asterisk18=m
-# CONFIG_PACKAGE_asterisk18-app-alarmreceiver is not set
-CONFIG_PACKAGE_asterisk18-app-authenticate=m
-# CONFIG_PACKAGE_asterisk18-app-chanisavail is not set
-# CONFIG_PACKAGE_asterisk18-app-chanspy is not set
-# CONFIG_PACKAGE_asterisk18-app-dahdiras is not set
-# CONFIG_PACKAGE_asterisk18-app-directed_pickup is not set
-CONFIG_PACKAGE_asterisk18-app-disa=m
-# CONFIG_PACKAGE_asterisk18-app-exec is not set
-# CONFIG_PACKAGE_asterisk18-app-minivm is not set
-# CONFIG_PACKAGE_asterisk18-app-mixmonitor is not set
-# CONFIG_PACKAGE_asterisk18-app-originate is not set
-# CONFIG_PACKAGE_asterisk18-app-playtones is not set
-# CONFIG_PACKAGE_asterisk18-app-read is not set
-# CONFIG_PACKAGE_asterisk18-app-readexten is not set
-CONFIG_PACKAGE_asterisk18-app-record=m
-# CONFIG_PACKAGE_asterisk18-app-sayunixtime is not set
-CONFIG_PACKAGE_asterisk18-app-senddtmf=m
-CONFIG_PACKAGE_asterisk18-app-setcallerid=m
-# CONFIG_PACKAGE_asterisk18-app-sms is not set
-# CONFIG_PACKAGE_asterisk18-app-stack is not set
-CONFIG_PACKAGE_asterisk18-app-system=m
-# CONFIG_PACKAGE_asterisk18-app-talkdetect is not set
-# CONFIG_PACKAGE_asterisk18-app-verbose is not set
-# CONFIG_PACKAGE_asterisk18-app-waituntil is not set
-# CONFIG_PACKAGE_asterisk18-app-while is not set
-# CONFIG_PACKAGE_asterisk18-cdr is not set
-# CONFIG_PACKAGE_asterisk18-cdr-csv is not set
-# CONFIG_PACKAGE_asterisk18-chan-agent is not set
-# CONFIG_PACKAGE_asterisk18-chan-dahdi is not set
-CONFIG_PACKAGE_asterisk18-chan-gtalk=m
-# CONFIG_PACKAGE_asterisk18-chan-iax2 is not set
-CONFIG_PACKAGE_asterisk18-chan-local=m
-# CONFIG_PACKAGE_asterisk18-chan-mgcp is not set
-# CONFIG_PACKAGE_asterisk18-chan-ooh323 is not set
-# CONFIG_PACKAGE_asterisk18-chan-sccp-b is not set
-# CONFIG_PACKAGE_asterisk18-chan-skinny is not set
-CONFIG_PACKAGE_asterisk18-codec-a-mu=m
-CONFIG_PACKAGE_asterisk18-codec-alaw=m
-# CONFIG_PACKAGE_asterisk18-codec-dahdi is not set
-# CONFIG_PACKAGE_asterisk18-codec-g722 is not set
-# CONFIG_PACKAGE_asterisk18-codec-g726 is not set
-# CONFIG_PACKAGE_asterisk18-codec-g729 is not set
-# CONFIG_PACKAGE_asterisk18-curl is not set
-# CONFIG_PACKAGE_asterisk18-format-g726 is not set
-# CONFIG_PACKAGE_asterisk18-format-g729 is not set
-# CONFIG_PACKAGE_asterisk18-format-sln is not set
-# CONFIG_PACKAGE_asterisk18-format-sln16 is not set
-# CONFIG_PACKAGE_asterisk18-func-base64 is not set
-# CONFIG_PACKAGE_asterisk18-func-blacklist is not set
-CONFIG_PACKAGE_asterisk18-func-channel=m
-CONFIG_PACKAGE_asterisk18-func-cut=m
-# CONFIG_PACKAGE_asterisk18-func-db is not set
-# CONFIG_PACKAGE_asterisk18-func-devstate is not set
-# CONFIG_PACKAGE_asterisk18-func-enum is not set
-# CONFIG_PACKAGE_asterisk18-func-env is not set
-# CONFIG_PACKAGE_asterisk18-func-extstate is not set
-# CONFIG_PACKAGE_asterisk18-func-global is not set
-# CONFIG_PACKAGE_asterisk18-func-groupcount is not set
-# CONFIG_PACKAGE_asterisk18-func-math is not set
-# CONFIG_PACKAGE_asterisk18-func-module is not set
-# CONFIG_PACKAGE_asterisk18-func-shell is not set
-# CONFIG_PACKAGE_asterisk18-func-uri is not set
-# CONFIG_PACKAGE_asterisk18-func-vmcount is not set
-# CONFIG_PACKAGE_asterisk18-mysql is not set
-# CONFIG_PACKAGE_asterisk18-odbc is not set
-# CONFIG_PACKAGE_asterisk18-pbx-ael is not set
-# CONFIG_PACKAGE_asterisk18-pbx-dundi is not set
-# CONFIG_PACKAGE_asterisk18-pbx-lua is not set
-# CONFIG_PACKAGE_asterisk18-pbx-spool is not set
-# CONFIG_PACKAGE_asterisk18-pgsql is not set
-# CONFIG_PACKAGE_asterisk18-res-ael-share is not set
-# CONFIG_PACKAGE_asterisk18-res-agi is not set
-CONFIG_PACKAGE_asterisk18-res-clioriginate=m
-CONFIG_PACKAGE_asterisk18-res-crypto=m
-# CONFIG_PACKAGE_asterisk18-res-fax is not set
-# CONFIG_PACKAGE_asterisk18-res-fax-spandsp is not set
-# CONFIG_PACKAGE_asterisk18-res-monitor is not set
-# CONFIG_PACKAGE_asterisk18-res-musiconhold is not set
-# CONFIG_PACKAGE_asterisk18-res-phoneprov is not set
-# CONFIG_PACKAGE_asterisk18-res-pktccops is not set
-# CONFIG_PACKAGE_asterisk18-res-smdi is not set
-# CONFIG_PACKAGE_asterisk18-res-srtp is not set
-# CONFIG_PACKAGE_asterisk18-res-timing-dahdi is not set
-# CONFIG_PACKAGE_asterisk18-res-timing-pthread is not set
-# CONFIG_PACKAGE_asterisk18-res-timing-timerfd is not set
-# CONFIG_PACKAGE_asterisk18-sounds is not set
-# CONFIG_PACKAGE_asterisk18-voicemail is not set
 # CONFIG_PACKAGE_baresip is not set
 # CONFIG_PACKAGE_freeswitch is not set
-# CONFIG_PACKAGE_kamailio3 is not set
 # CONFIG_PACKAGE_kamailio4 is not set
 # CONFIG_PACKAGE_miax is not set
 # CONFIG_PACKAGE_pcapsipdump is not set
@@ -6470,6 +6401,7 @@ CONFIG_PACKAGE_dmesg=m
 CONFIG_PACKAGE_dropbearconvert=m
 # CONFIG_PACKAGE_dump1090 is not set
 # CONFIG_PACKAGE_dvtm is not set
+# CONFIG_PACKAGE_elektra-kdb is not set
 # CONFIG_PACKAGE_evtest is not set
 # CONFIG_PACKAGE_extract is not set
 CONFIG_PACKAGE_fbtest=m
@@ -6619,6 +6551,8 @@ CONFIG_PACKAGE_smartmontools=m
 # CONFIG_PACKAGE_sockread is not set
 # CONFIG_PACKAGE_spi-tools is not set
 CONFIG_PACKAGE_spidev-test=m
+# CONFIG_PACKAGE_squashfs-tools-mksquashfs is not set
+# CONFIG_PACKAGE_squashfs-tools-unsquashfs is not set
 CONFIG_PACKAGE_sshpass=m
 # CONFIG_PACKAGE_stm32flash is not set
 # CONFIG_PACKAGE_stoken is not set
