updating linino-scripts and linino-conf

--- a/package/linino/linino-scripts/Makefile
+++ b/package/linino/linino-scripts/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=linino-scripts
 PKG_VERSION:=1.5
-PKG_RELEASE:=4
+PKG_RELEASE:=6
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -64,7 +64,7 @@ define Package/linino-scripts/install
 	$(INSTALL_BIN) ./files/usr/bin/wifi-reload $(1)/usr/bin
 
 	$(INSTALL_BIN) ./files/etc/init.d/rename-wifi-if-access-point $(1)/etc/init.d
-	# $(INSTALL_BIN) ./files/etc/init.d/generate_new_gpg_key $(1)/etc/init.d
+	$(INSTALL_BIN) ./files/etc/init.d/generate_new_gpg_key $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/delete_uhttpd_cert $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/handle_wifi_reset $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/etc/init.d/rngd-turn-off $(1)/etc/init.d
