disabling triggerhappy; new packages : neard and neard-git

--- a/package/linino/linino-conf/Makefile
+++ b/package/linino/linino-conf/Makefile
@@ -17,7 +17,7 @@ define Package/linino-conf
   SECTION:=utils
   CATEGORY:=Base system
   TITLE:=Custom Linino configurations
-  DEPENDS:=+avahi-daemon-service-http +base-files +triggerhappy
+  DEPENDS:=+avahi-daemon-service-http +base-files
 endef
 
 define Package/linino-conf/conffiles
