--- a/.config
+++ b/.config
@@ -2425,7 +2425,7 @@ CONFIG_PACKAGE_avr-gdb=m
 CONFIG_PACKAGE_binutils=m
 CONFIG_PACKAGE_diffutils=m
 CONFIG_PACKAGE_findutils=m
-CONFIG_PACKAGE_gcc=m
+# CONFIG_PACKAGE_gcc is not set
 CONFIG_PACKAGE_gdb=m
 CONFIG_PACKAGE_gdbserver=m
 # CONFIG_PACKAGE_libtool-bin is not set
@@ -5124,7 +5124,7 @@ CONFIG_MJPG_STREAMER_WWW=y
 CONFIG_PACKAGE_motion=m
 CONFIG_PACKAGE_png2mono=m
 # CONFIG_PACKAGE_tvheadend is not set
-CONFIG_PACKAGE_vips=m
+# CONFIG_PACKAGE_vips is not set
 # CONFIG_PACKAGE_xupnpd is not set
 # CONFIG_PACKAGE_youtube-dl is not set
 
@@ -5144,10 +5144,12 @@ CONFIG_PACKAGE_ctorrent-nossl=m
 # CONFIG_PACKAGE_opentracker6 is not set
 # CONFIG_PACKAGE_rtorrent is not set
 # CONFIG_PACKAGE_rtorrent-rpc is not set
-CONFIG_PACKAGE_transmission-daemon=m
-# CONFIG_PACKAGE_transmission-cli is not set
-CONFIG_PACKAGE_transmission-remote=m
-CONFIG_PACKAGE_transmission-web=m
+# CONFIG_PACKAGE_transmission-cli-openssl is not set
+# CONFIG_PACKAGE_transmission-cli-polarssl is not set
+# CONFIG_PACKAGE_transmission-daemon-openssl is not set
+# CONFIG_PACKAGE_transmission-daemon-polarssl is not set
+# CONFIG_PACKAGE_transmission-remote-openssl is not set
+# CONFIG_PACKAGE_transmission-remote-polarssl is not set
 
 #
 # Captive Portals
@@ -5800,6 +5802,7 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 # wireless
 #
 CONFIG_PACKAGE_aircrack-ng=m
+# CONFIG_PACKAGE_airmon-ng is not set
 CONFIG_PACKAGE_horst=m
 CONFIG_PACKAGE_kismet-client=m
 CONFIG_PACKAGE_kismet-drone=m
