--- a/.config
+++ b/.config
@@ -3701,6 +3701,7 @@ CONFIG_PACKAGE_libapr=m
 CONFIG_PACKAGE_libaprutil=m
 # CONFIG_PACKAGE_libarchive is not set
 # CONFIG_PACKAGE_libartnet is not set
+CONFIG_PACKAGE_libasm=m
 CONFIG_PACKAGE_libassuan=y
 CONFIG_PACKAGE_libaudiofile=m
 CONFIG_PACKAGE_libavahi-client=m
@@ -3771,7 +3772,6 @@ CONFIG_PACKAGE_libdevmapper=m
 # CONFIG_PACKAGE_libdmapsharing is not set
 CONFIG_PACKAGE_libdnet=m
 CONFIG_PACKAGE_libelf1=y
-CONFIG_PACKAGE_libasm=m
 CONFIG_PACKAGE_libdw=m
 # CONFIG_PACKAGE_libesmtp is not set
 # CONFIG_PACKAGE_libev is not set
@@ -3843,6 +3843,7 @@ CONFIG_PACKAGE_libmosquitto=m
 CONFIG_PACKAGE_libmount=m
 CONFIG_PACKAGE_libmpdclient=m
 CONFIG_PACKAGE_libmpeg2=m
+CONFIG_PACKAGE_libmpsse=m
 # CONFIG_PACKAGE_libmraa is not set
 CONFIG_PACKAGE_libmysqlclient=m
 CONFIG_PACKAGE_libmysqlclient-r=m
@@ -6275,6 +6276,7 @@ CONFIG_PACKAGE_lm-sensors-detect=m
 CONFIG_PACKAGE_logger=m
 # CONFIG_PACKAGE_logtrigger is not set
 CONFIG_PACKAGE_look=m
+CONFIG_PACKAGE_lora-gateway=m
 CONFIG_PACKAGE_losetup=m
 CONFIG_PACKAGE_lsof=m
 CONFIG_PACKAGE_lxc=m
@@ -6388,6 +6390,7 @@ CONFIG_PACKAGE_openocd=m
 CONFIG_PACKAGE_openssl-util=y
 # CONFIG_PACKAGE_opus-tools is not set
 CONFIG_PACKAGE_owipcalc=m
+CONFIG_PACKAGE_packet-forwarder=m
 CONFIG_PACKAGE_pciutils=m
 CONFIG_PACKAGE_pcscd=m
 # CONFIG_PACKAGE_pps-tools is not set
