--- a/.config
+++ b/.config
@@ -3318,7 +3318,7 @@ CONFIG_PACKAGE_python-ctypes=m
 CONFIG_PACKAGE_python-db=m
 CONFIG_PACKAGE_python-decimal=m
 CONFIG_PACKAGE_python-distutils=m
-# CONFIG_PACKAGE_python-dns is not set
+CONFIG_PACKAGE_python-dns=m
 CONFIG_PACKAGE_python-email=m
 CONFIG_PACKAGE_python-gdbm=m
 # CONFIG_PACKAGE_python-gtk is not set
@@ -3335,7 +3335,7 @@ CONFIG_PACKAGE_python-nfcpy=m
 CONFIG_PACKAGE_python-nfcpy-examples=m
 CONFIG_PACKAGE_python-openssl=m
 CONFIG_PACKAGE_python-paho-mqtt=m
-# CONFIG_PACKAGE_python-pip is not set
+CONFIG_PACKAGE_python-pip=m
 CONFIG_PACKAGE_python-pydoc=m
 CONFIG_PACKAGE_python-pyserial=m
 CONFIG_PACKAGE_python-setuptools=m
