switching kernel branch to for-15.05-rc2-nfc

--- a/.config
+++ b/.config
@@ -415,7 +415,7 @@ CONFIG_TARGET_ROOTFS_DIR=""
 CONFIG_EXTERNAL_KERNEL_TREE=""
 CONFIG_KERNEL_GIT_CLONE_URI="https://github.com/artynet/linux-3.18.11.git"
 CONFIG_KERNEL_GIT_LOCAL_REPOSITORY=""
-CONFIG_KERNEL_GIT_BRANCH="nfc-uart"
+CONFIG_KERNEL_GIT_BRANCH="for-15.05-rc2-nfc"
 # CONFIG_BUILD_LOG is not set
 # CONFIG_SRC_TREE_OVERRIDE is not set
 CONFIG_EXTRA_OPTIMIZATION="-fno-caller-saves"
