new packages : neard, neard-git

--- a/.config
+++ b/.config
@@ -3323,6 +3323,8 @@ CONFIG_PACKAGE_python-logging=m
 CONFIG_PACKAGE_python-multiprocessing=m
 CONFIG_PACKAGE_python-mysql=m
 CONFIG_PACKAGE_python-ncurses=m
+CONFIG_PACKAGE_python-neard=m
+CONFIG_PACKAGE_python-neard-git=m
 CONFIG_PACKAGE_python-nfcpy=m
 CONFIG_PACKAGE_python-nfcpy-examples=m
 CONFIG_PACKAGE_python-openssl=y
@@ -6362,6 +6364,8 @@ CONFIG_PACKAGE_mtd-utils-ubirsvol=m
 CONFIG_PACKAGE_mtd-utils-ubiupdatevol=m
 CONFIG_PACKAGE_mtd-utils-tests=m
 CONFIG_PACKAGE_namei=m
+CONFIG_PACKAGE_neard=m
+CONFIG_PACKAGE_neard-git=m
 CONFIG_PACKAGE_nfc-utils=m
 CONFIG_PACKAGE_obexfs=m
 CONFIG_PACKAGE_obexftp=m
