--- a/.config
+++ b/.config
@@ -6376,6 +6376,7 @@ CONFIG_PACKAGE_namei=m
 CONFIG_PACKAGE_neard=m
 CONFIG_PACKAGE_neard-git=m
 CONFIG_PACKAGE_nfc-utils=m
+CONFIG_PACKAGE_nfcst-utils=m
 CONFIG_PACKAGE_obexfs=m
 CONFIG_PACKAGE_obexftp=m
 CONFIG_PACKAGE_ocf-crypto-headers=m
