--- a/.config
+++ b/.config
@@ -2282,44 +2282,44 @@ CONFIG_PACKAGE_wireless-tools=y
 #
 # webif
 #
-# CONFIG_PACKAGE_webif is not set
-# CONFIG_PACKAGE_webif-applications is not set
-# CONFIG_PACKAGE_webif-batman is not set
-# CONFIG_PACKAGE_webif-fonheartbeat is not set
-# CONFIG_PACKAGE_webif-freeloader is not set
-# CONFIG_PACKAGE_webif-freeloader-lang-cs is not set
-# CONFIG_PACKAGE_webif-hotspot is not set
-# CONFIG_PACKAGE_webif-iw-lua is not set
-# CONFIG_PACKAGE_webif-iw-lua-chillispot is not set
-# CONFIG_PACKAGE_webif-iw-lua-openssl is not set
-# CONFIG_PACKAGE_webif-iw-lua-openvpn is not set
-# CONFIG_PACKAGE_webif-lang-ca is not set
-# CONFIG_PACKAGE_webif-lang-cs is not set
-# CONFIG_PACKAGE_webif-lang-da is not set
-# CONFIG_PACKAGE_webif-lang-de is not set
-# CONFIG_PACKAGE_webif-lang-ee is not set
-# CONFIG_PACKAGE_webif-lang-es is not set
-# CONFIG_PACKAGE_webif-lang-fr is not set
-# CONFIG_PACKAGE_webif-lang-hr is not set
-# CONFIG_PACKAGE_webif-lang-hu is not set
-# CONFIG_PACKAGE_webif-lang-it is not set
-# CONFIG_PACKAGE_webif-lang-nl is not set
-# CONFIG_PACKAGE_webif-lang-no is not set
-# CONFIG_PACKAGE_webif-lang-pl is not set
-# CONFIG_PACKAGE_webif-lang-pt is not set
-# CONFIG_PACKAGE_webif-lang-ru is not set
-# CONFIG_PACKAGE_webif-lang-sq is not set
-# CONFIG_PACKAGE_webif-lang-sv is not set
-# CONFIG_PACKAGE_webif-lang-uk is not set
-# CONFIG_PACKAGE_webif-lang-zh is not set
-# CONFIG_PACKAGE_webif-mesh is not set
-# CONFIG_PACKAGE_webif-netsukuku is not set
-# CONFIG_PACKAGE_webif-theme-clubman is not set
-# CONFIG_PACKAGE_webif-theme-sedky1 is not set
-# CONFIG_PACKAGE_webif-theme-xwrt is not set
-# CONFIG_PACKAGE_webif-theme-xwrt-mini is not set
-# CONFIG_PACKAGE_webif-theme-zephyr is not set
-# CONFIG_PACKAGE_webif-vpn is not set
+CONFIG_PACKAGE_webif=m
+CONFIG_PACKAGE_webif-applications=m
+CONFIG_PACKAGE_webif-batman=m
+CONFIG_PACKAGE_webif-fonheartbeat=m
+CONFIG_PACKAGE_webif-freeloader=m
+CONFIG_PACKAGE_webif-freeloader-lang-cs=m
+CONFIG_PACKAGE_webif-hotspot=m
+CONFIG_PACKAGE_webif-iw-lua=m
+CONFIG_PACKAGE_webif-iw-lua-chillispot=m
+CONFIG_PACKAGE_webif-iw-lua-openssl=m
+CONFIG_PACKAGE_webif-iw-lua-openvpn=m
+CONFIG_PACKAGE_webif-lang-ca=m
+CONFIG_PACKAGE_webif-lang-cs=m
+CONFIG_PACKAGE_webif-lang-da=m
+CONFIG_PACKAGE_webif-lang-de=m
+CONFIG_PACKAGE_webif-lang-ee=m
+CONFIG_PACKAGE_webif-lang-es=m
+CONFIG_PACKAGE_webif-lang-fr=m
+CONFIG_PACKAGE_webif-lang-hr=m
+CONFIG_PACKAGE_webif-lang-hu=m
+CONFIG_PACKAGE_webif-lang-it=m
+CONFIG_PACKAGE_webif-lang-nl=m
+CONFIG_PACKAGE_webif-lang-no=m
+CONFIG_PACKAGE_webif-lang-pl=m
+CONFIG_PACKAGE_webif-lang-pt=m
+CONFIG_PACKAGE_webif-lang-ru=m
+CONFIG_PACKAGE_webif-lang-sq=m
+CONFIG_PACKAGE_webif-lang-sv=m
+CONFIG_PACKAGE_webif-lang-uk=m
+CONFIG_PACKAGE_webif-lang-zh=m
+CONFIG_PACKAGE_webif-mesh=m
+CONFIG_PACKAGE_webif-netsukuku=m
+CONFIG_PACKAGE_webif-theme-clubman=m
+CONFIG_PACKAGE_webif-theme-sedky1=m
+CONFIG_PACKAGE_webif-theme-xwrt=m
+CONFIG_PACKAGE_webif-theme-xwrt-mini=m
+CONFIG_PACKAGE_webif-theme-zephyr=m
+CONFIG_PACKAGE_webif-vpn=m
 
 #
 # zabbix
@@ -4062,6 +4062,7 @@ CONFIG_PACKAGE_luci-app-ahcp=m
 # CONFIG_PACKAGE_luci-app-bird4 is not set
 # CONFIG_PACKAGE_luci-app-bird6 is not set
 # CONFIG_PACKAGE_luci-app-bmx6 is not set
+# CONFIG_PACKAGE_luci-app-bmx7 is not set
 # CONFIG_PACKAGE_luci-app-cjdns is not set
 CONFIG_PACKAGE_luci-app-commands=m
 # CONFIG_PACKAGE_luci-app-cshark is not set
@@ -5270,7 +5271,7 @@ CONFIG_PACKAGE_p910nd=m
 #
 # CONFIG_PACKAGE_babel-pinger is not set
 CONFIG_PACKAGE_babeld=m
-# CONFIG_PACKAGE_batmand is not set
+CONFIG_PACKAGE_batmand=m
 # CONFIG_PACKAGE_bcp38 is not set
 CONFIG_PACKAGE_bird4=m
 # CONFIG_PACKAGE_bird4-uci is not set
