--- a/.config
+++ b/.config
@@ -5883,6 +5883,13 @@ CONFIG_PACKAGE_pulseaudio-tools=m
 #
 
 #
+# Ciao
+#
+CONFIG_PACKAGE_ciao-connector-phant=m
+CONFIG_PACKAGE_ciao-connector-smtp=m
+CONFIG_PACKAGE_ciao-connector-xmpp=m
+
+#
 # Compression
 #
 CONFIG_PACKAGE_bzip2=m
