--- a/.config
+++ b/.config
@@ -402,9 +402,9 @@ CONFIG_BUILD_SUFFIX=""
 CONFIG_TARGET_ROOTFS_DIR=""
 # CONFIG_CCACHE is not set
 CONFIG_EXTERNAL_KERNEL_TREE=""
-CONFIG_KERNEL_GIT_CLONE_URI="http://github.com/linino/linux.git"
+CONFIG_KERNEL_GIT_CLONE_URI="http://github.com/artynet/linux-3.18.11.git"
 CONFIG_KERNEL_GIT_LOCAL_REPOSITORY=""
-CONFIG_KERNEL_GIT_BRANCH="for-15.05-rc1"
+CONFIG_KERNEL_GIT_BRANCH="for-15.05-rc1-nfc"
 # CONFIG_BUILD_LOG is not set
 # CONFIG_SRC_TREE_OVERRIDE is not set
 CONFIG_EXTRA_OPTIMIZATION="-fno-caller-saves"
