--- a/package/linino/neard-git/Makefile
+++ b/package/linino/neard-git/Makefile
@@ -55,7 +55,7 @@ define Package/python-neard-git
   DEFAULT:=m
   CATEGORY:=Languages
   SUBMENU:=Python
-  DEPENDS:=+libpthread +libc +libstdcpp +python-base +python-light +dbus-python
+  DEPENDS:=+libpthread +libc +libstdcpp +python-base +python-light +dbus-python +python-logging
   URL:=https://01.org/linux-nfc
 endef
 
