--- a/.config
+++ b/.config
@@ -4044,6 +4044,7 @@ CONFIG_PACKAGE_luci-app-ahcp=m
 # CONFIG_PACKAGE_luci-app-bird4 is not set
 # CONFIG_PACKAGE_luci-app-bird6 is not set
 # CONFIG_PACKAGE_luci-app-bmx6 is not set
+# CONFIG_PACKAGE_luci-app-bmx7 is not set
 # CONFIG_PACKAGE_luci-app-cjdns is not set
 CONFIG_PACKAGE_luci-app-commands=m
 # CONFIG_PACKAGE_luci-app-cshark is not set
@@ -5885,6 +5886,7 @@ CONFIG_PACKAGE_pulseaudio-tools=m
 #
 # Ciao
 #
+CONFIG_PACKAGE_ciao=m
 CONFIG_PACKAGE_ciao-connector-phant=m
 CONFIG_PACKAGE_ciao-connector-smtp=m
 CONFIG_PACKAGE_ciao-connector-xmpp=m
@@ -6033,7 +6035,6 @@ CONFIG_PACKAGE_bluez-examples=m
 CONFIG_PACKAGE_bluez-utils=m
 CONFIG_PACKAGE_cal=m
 CONFIG_PACKAGE_ccrypt=m
-CONFIG_PACKAGE_ciao=m
 CONFIG_PACKAGE_cmdpad=m
 CONFIG_PACKAGE_collectd=m
 # CONFIG_PACKAGE_collectd-mod-apache is not set
