updating findutils to v4.6.0

--- a/package/linino/findutils/Makefile
+++ b/package/linino/findutils/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=findutils
-PKG_VERSION:=4.4.2
+PKG_VERSION:=4.6.0
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=@GNU/findutils
-# PKG_MD5SUM:=b7e35aa175778c84942b1fee4144988b
+PKG_MD5SUM:=9936aa8009438ce185bea2694a997fc1
 
 PKG_INSTALL:=1
 
