switching kernel repository URL to the official one

--- a/.config
+++ b/.config
@@ -413,9 +413,9 @@ CONFIG_BUILD_SUFFIX=""
 CONFIG_TARGET_ROOTFS_DIR=""
 # CONFIG_CCACHE is not set
 CONFIG_EXTERNAL_KERNEL_TREE=""
-CONFIG_KERNEL_GIT_CLONE_URI="https://github.com/artynet/linux-3.18.11.git"
+CONFIG_KERNEL_GIT_CLONE_URI="https://github.com/linino/linux.git"
 CONFIG_KERNEL_GIT_LOCAL_REPOSITORY=""
-CONFIG_KERNEL_GIT_BRANCH="for-15.05-rc2-nfc"
+CONFIG_KERNEL_GIT_BRANCH="for-15.05-rc2"
 # CONFIG_BUILD_LOG is not set
 # CONFIG_SRC_TREE_OVERRIDE is not set
 CONFIG_EXTRA_OPTIMIZATION="-fno-caller-saves"
