now the defaut user and password are set to arduino

--- a/package/linino/linino-conf/Makefile
+++ b/package/linino/linino-conf/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=linino-conf
 PKG_VERSION:=1.0
-PKG_RELEASE:=5
+PKG_RELEASE:=6
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -54,7 +54,6 @@ define Package/linino-conf/install
 	$(INSTALL_CONF) ./files/etc/banner $(1)/etc/
 	$(INSTALL_CONF) ./files/etc/inittab $(1)/etc/
 	$(INSTALL_CONF) ./files/etc/rc.local $(1)/etc/
-	$(INSTALL_CONF) ./files/etc/shadow $(1)/etc/
 	$(INSTALL_CONF) ./files/etc/httpd.conf $(1)/etc/
 	$(INSTALL_CONF) ./files/etc/fw_env.config $(1)/etc/
 
@@ -62,7 +61,7 @@ define Package/linino-conf/install
 	# $(INSTALL_CONF) ./files/etc/config/arduino $(1)/etc/config/
 	$(INSTALL_CONF) ./files/etc/config/firewall $(1)/etc/config/
 	# $(INSTALL_CONF) ./files/etc/config/network $(1)/etc/config/
-	$(INSTALL_CONF) ./files/etc/config/system $(1)/etc/config/
+	# $(INSTALL_CONF) ./files/etc/config/system $(1)/etc/config/
 	$(INSTALL_CONF) ./files/etc/config/uhttpd $(1)/etc/config/
 	
 	# /etc/arduino DIR
