refreshing patches for shellinabox

--- a/package/linino/shellinabox/Makefile
+++ b/package/linino/shellinabox/Makefile
@@ -21,7 +21,7 @@ PKG_REVISION:=e6c25e84bc662797c7382500f136bb74874c2500
 PKG_SOURCE_VERSION=$(PKG_REVISION)
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_URL:=https://github.com/shellinabox/shellinabox.git
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_REVISION).tar.gz
 
 PKG_FIXUP:=libtool autoreconf
 
