--- a/.config
+++ b/.config
@@ -3706,7 +3706,6 @@ CONFIG_PACKAGE_libapr=m
 CONFIG_PACKAGE_libaprutil=m
 # CONFIG_PACKAGE_libarchive is not set
 # CONFIG_PACKAGE_libartnet is not set
-CONFIG_PACKAGE_libasm=m
 CONFIG_PACKAGE_libassuan=y
 CONFIG_PACKAGE_libaudiofile=m
 CONFIG_PACKAGE_libavahi-client=m
@@ -3777,7 +3776,9 @@ CONFIG_PACKAGE_libdbus-glib=m
 CONFIG_PACKAGE_libdevmapper=m
 # CONFIG_PACKAGE_libdmapsharing is not set
 CONFIG_PACKAGE_libdnet=m
+CONFIG_PACKAGE_libedit=m
 CONFIG_PACKAGE_libelf1=y
+CONFIG_PACKAGE_libasm=m
 CONFIG_PACKAGE_libdw=m
 # CONFIG_PACKAGE_libesmtp is not set
 # CONFIG_PACKAGE_libev is not set
@@ -6366,6 +6367,7 @@ CONFIG_PACKAGE_mtd-utils-tests=m
 CONFIG_PACKAGE_namei=m
 CONFIG_PACKAGE_neard=m
 CONFIG_PACKAGE_neard-git=m
+CONFIG_PACKAGE_neardal=m
 CONFIG_PACKAGE_nfc-utils=m
 CONFIG_PACKAGE_nfcst-utils=m
 CONFIG_PACKAGE_obexfs=m
