--- a/.config
+++ b/.config
@@ -2284,7 +2284,7 @@ CONFIG_PACKAGE_wireless-tools=y
 #
 CONFIG_PACKAGE_webif=m
 CONFIG_PACKAGE_webif-applications=m
-CONFIG_PACKAGE_webif-batman=m
+# CONFIG_PACKAGE_webif-batman is not set
 CONFIG_PACKAGE_webif-fonheartbeat=m
 CONFIG_PACKAGE_webif-freeloader=m
 CONFIG_PACKAGE_webif-freeloader-lang-cs=m
@@ -5272,7 +5272,7 @@ CONFIG_PACKAGE_p910nd=m
 #
 # CONFIG_PACKAGE_babel-pinger is not set
 CONFIG_PACKAGE_babeld=m
-CONFIG_PACKAGE_batmand=m
+# CONFIG_PACKAGE_batmand is not set
 # CONFIG_PACKAGE_bcp38 is not set
 CONFIG_PACKAGE_bird4=m
 # CONFIG_PACKAGE_bird4-uci is not set
