--- a/package/linino/node-modbus/Makefile
+++ b/package/linino/node-modbus/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NPM_NAME:=modbus
 PKG_NAME:=node-$(PKG_NPM_NAME)
-PKG_VERSION:=0.0.13
+PKG_VERSION:=0.0.14
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NPM_NAME)-$(PKG_VERSION).tgz
@@ -17,12 +17,12 @@ PKG_SOURCE_URL:=http://registry.nodejitsu.com/$(PKG_NPM_NAME)/-/
 # PKG_MD5SUM:=f68e9c828c1b55ba00445d3e09872325
 
 PKG_BUILD_DEPENDS:=node
-PKG_NODE_VERSION:=4.2.1
+PKG_NODE_VERSION:=6.3.0
 
 include $(INCLUDE_DIR)/package.mk
 
 define Package/node-modbus
-    DEPENDS:=@BROKEN +node +libmodbus +python +dbus-python
+    DEPENDS:=+node +libmodbus +python +dbus-python
     SUBMENU:=Node.js
     SECTION:=lang
     CATEGORY:=Languages
