downgrading node and its modules to v0.10.46

--- a/package/linino/node-alljoyn/Makefile
+++ b/package/linino/node-alljoyn/Makefile
@@ -12,12 +12,12 @@ PKG_NAME:=node-$(PKG_NPM_NAME)
 PKG_VERSION:=1.0.1
 PKG_RELEASE:=1
 
-PKG_SOURCE:=node-$(PKG_NPM_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=http://download.linino.org/sources/
+PKG_SOURCE:=$(PKG_NPM_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=http://registry.npmjs.org/$(PKG_NPM_NAME)/-/
 # PKG_MD5SUM:=62939cc82beafed7a75c18bef7d1e1b9
 
 PKG_BUILD_DEPENDS:=node
-PKG_NODE_VERSION:=6.3.0
+PKG_NODE_VERSION:=0.10.46
 
 include $(INCLUDE_DIR)/package.mk
 
