adding openvpn packages and LUci interface

--- a/.config
+++ b/.config
@@ -4082,7 +4082,7 @@ CONFIG_PACKAGE_luci-app-ntpc=m
 CONFIG_PACKAGE_luci-app-olsr=m
 CONFIG_PACKAGE_luci-app-olsr-services=m
 CONFIG_PACKAGE_luci-app-olsr-viz=m
-# CONFIG_PACKAGE_luci-app-openvpn is not set
+CONFIG_PACKAGE_luci-app-openvpn=m
 CONFIG_PACKAGE_luci-app-p2pblock=m
 CONFIG_PACKAGE_luci-app-p910nd=m
 CONFIG_PACKAGE_luci-app-pbx=m
@@ -4476,6 +4476,31 @@ CONFIG_PACKAGE_remote-update=m
 # CONFIG_PACKAGE_luci-i18n-olsr-vi is not set
 # CONFIG_PACKAGE_luci-i18n-olsr-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-olsr-zh-tw is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-ca is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-cs is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-de is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-el is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-en is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-es is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-fr is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-he is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-hu is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-it is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-ja is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-ms is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-no is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-pl is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-pt is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-ro is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-ru is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-sk is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-sv is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-tr is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-uk is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-vi is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-zh-tw is not set
 # CONFIG_PACKAGE_luci-i18n-p2pblock-ca is not set
 # CONFIG_PACKAGE_luci-i18n-p2pblock-cs is not set
 # CONFIG_PACKAGE_luci-i18n-p2pblock-de is not set
@@ -5503,9 +5528,47 @@ CONFIG_OPENCONNECT_GNUTLS=y
 # CONFIG_OPENCONNECT_STOKEN is not set
 CONFIG_PACKAGE_opennhrp=m
 CONFIG_PACKAGE_openvpn-easy-rsa=m
-# CONFIG_PACKAGE_openvpn-nossl is not set
-# CONFIG_PACKAGE_openvpn-openssl is not set
-# CONFIG_PACKAGE_openvpn-polarssl is not set
+CONFIG_PACKAGE_openvpn-nossl=m
+CONFIG_OPENVPN_nossl_ENABLE_LZO=y
+CONFIG_OPENVPN_nossl_ENABLE_SERVER=y
+# CONFIG_OPENVPN_nossl_ENABLE_MANAGEMENT is not set
+CONFIG_OPENVPN_nossl_ENABLE_HTTP=y
+CONFIG_OPENVPN_nossl_ENABLE_SOCKS=y
+CONFIG_OPENVPN_nossl_ENABLE_FRAGMENT=y
+CONFIG_OPENVPN_nossl_ENABLE_MULTIHOME=y
+CONFIG_OPENVPN_nossl_ENABLE_PORT_SHARE=y
+CONFIG_OPENVPN_nossl_ENABLE_DEF_AUTH=y
+CONFIG_OPENVPN_nossl_ENABLE_PF=y
+# CONFIG_OPENVPN_nossl_ENABLE_IPROUTE2 is not set
+CONFIG_OPENVPN_nossl_ENABLE_SMALL=y
+CONFIG_PACKAGE_openvpn-openssl=m
+CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+# CONFIG_OPENVPN_openssl_ENABLE_X509_ALT_USERNAME is not set
+CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
+# CONFIG_OPENVPN_openssl_ENABLE_MANAGEMENT is not set
+CONFIG_OPENVPN_openssl_ENABLE_HTTP=y
+CONFIG_OPENVPN_openssl_ENABLE_SOCKS=y
+CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+CONFIG_OPENVPN_openssl_ENABLE_MULTIHOME=y
+CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
+CONFIG_OPENVPN_openssl_ENABLE_PF=y
+# CONFIG_OPENVPN_openssl_ENABLE_IPROUTE2 is not set
+CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
+CONFIG_PACKAGE_openvpn-polarssl=m
+CONFIG_OPENVPN_polarssl_ENABLE_LZO=y
+# CONFIG_OPENVPN_polarssl_ENABLE_X509_ALT_USERNAME is not set
+CONFIG_OPENVPN_polarssl_ENABLE_SERVER=y
+# CONFIG_OPENVPN_polarssl_ENABLE_MANAGEMENT is not set
+CONFIG_OPENVPN_polarssl_ENABLE_HTTP=y
+CONFIG_OPENVPN_polarssl_ENABLE_SOCKS=y
+CONFIG_OPENVPN_polarssl_ENABLE_FRAGMENT=y
+CONFIG_OPENVPN_polarssl_ENABLE_MULTIHOME=y
+CONFIG_OPENVPN_polarssl_ENABLE_PORT_SHARE=y
+CONFIG_OPENVPN_polarssl_ENABLE_DEF_AUTH=y
+CONFIG_OPENVPN_polarssl_ENABLE_PF=y
+# CONFIG_OPENVPN_polarssl_ENABLE_IPROUTE2 is not set
+CONFIG_OPENVPN_polarssl_ENABLE_SMALL=y
 # CONFIG_PACKAGE_pptpd is not set
 CONFIG_PACKAGE_strongswan=m
 
